# deep_learning

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-to-github-pages.yml  publish to packages-dev.yml  publish to packages.yml
docs/docs_skeleton/: docusaurus.config.js
docs/files/: Bal Narendra Sapa - Homework1.ipynb  Intro.md  Introduction.md
streamlit_apps/: Face_Recognition_deepface.py  object_detection.py
