[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = ["Bal Narendra Sapa <bnsapa2000@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_learning"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
